# SadRobot

./: .gitignore  Datasets_and_Lit_Ideas.md  chat.py  end_assistant.py  feel_better.jsonl  feel_better_2.jsonl  feel_better_2_cleaned.jsonl  feel_better_cleaned.jsonl  finetune_soda_50.jsonl  finetune_soda_50_end_assistant.jsonl  package-lock.json  prompt.txt  soda.ipynb  soda.py  soda2.ipynb  soda_counseling.csv  soda_feel_better.csv  test.html  testSuiteDimensions.txt  test_parsing.py
Data/: ConversationData.md
Data/transcripts/: conv_0001kbc5brn6frfrkf92vk4z49aq.txt  conv_0101kbc4v4x1en5bembpjh506dn3.txt  conv_0101kbc50dj0ehkadwzw0tjymezw.txt  conv_0201kbc4j99jfrwbh38aeh1g98wy.txt  (+90 more)
VoiceAgentsOpenaiTest/: ARCHITECTURE.md  README.md  app.py  pyproject.toml  requirements.txt
VoiceAgentsOpenaiTest/templates/: index.html
models/: rock.glb
videofade-test/: .env.example  .gitignore  AGENT_CONFIGURATION_GUIDE.md  CLEAR_SURVEY.md  CONVERSATION_LINKING_GUIDE.md  DATABASE_SETUP.md  DEPLOYMENT_INSTRUCTIONS.md  EMOTION_TRACKING.md  IMPLEMENTATION_SUMMARY.md  OPENAI_SENTIMENT_INTEGRATION.md  QUICKSTART.md  README.md  ROBOT_TAG_SETUP.md  SUPABASE_SETUP.md  SURVEY_SETUP.md  SYSTEM_DIAGRAM.txt  VERCEL_DEPLOYMENT.md  VIEW_DATA.md  VISUAL_CUSTOMIZATION_GUIDE.md  database-migration-add-consent-forms.sql  database-migration-add-conversation-id.sql  database-migration-add-final-affect-scores.sql  database-migration-add-robot-tag.sql  database-setup.sql  index.html  instructions.html  package.json  query-examples.sql  server.js  setup-supabase-db.js  vercel.json
(+15 files in other folders)
