[project]
name = "voiceagentsopenaitest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "numpy>=2.2.6",
    "openai>=2.0.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
